Resolving plugin issue